# rilipak

./: .gitignore  Cargo.toml  LICENSE  justfile
.github/workflows/: mcmodbuild-rust.yml  rust.yml
mcmodbuild/: Cargo.toml  README.md
mcmodbuild/src/: binary.rs  cli.rs  installer.rs  lib.rs  main.rs  structs.rs
oxfmt/: Cargo.toml  README.md
oxfmt-derive/: Cargo.toml
oxfmt/src/: builder.rs  deserialize.rs  lib.rs  macros.rs  types.rs
oxfmt_derive/: Cargo.toml
oxfmt_derive/src/: lib.rs
src/: check.rs  cli.rs  macros.rs  main.rs  pack.rs  structs.rs
