[package]
name = "rilipak"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
mcmodbuild = { path = "./mcmodbuild", package = "mcmodbuild" }
oxfmt = { path = "./oxfmt", packge = "oxfmt" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
zip = "4.3.0"
