[package]
name = "mcmodbuild"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
oxfmt = { path = "../oxfmt", package = "oxfmt" }

[lib]
name = "mcmodbuild"
path = "src/lib.rs"
